Fetch golint properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ branches:
 go:
   - '1.14.6'
 before_script:
-  - go get -u github.com/golang/lint/golint
+  - go get -u golang.org/x/lint/golint
 script:
   - ./test.sh
